--- a/react-solution/src/App.css
+++ b/react-solution/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body,
+#root{
+  height: 100vh;
+  background: #090B1A;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#root{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.App {
+  text-align: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#main{
+  width: 1040px;
+  display: flex;
+  background: #1B1938;
+  color: white;
+  border-radius: 10px;
+}
+#content{
+  padding: 40px 100px 70px 40px;
+  text-align: left;
+  width: 500px;
+  box-sizing: border-box;
+}
+h2{
+  font-size: 2.1875em;
+}
+#highlight{
+  background: #AA5CDB;
+  border-radius : 0 10px 10px 0;
+  overflow: hidden;
+}
+img{
+    opacity: 0.7;
+    width: 100%;
+    display: block;
+}
+strong{
+  color: #AA5CDB;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#stats{
+  display: flex;
+  justify-content: space-between;
+  text-transform: uppercase;
+  color: rgb(255,255,255,0.6);
+  margin-top: 60px 
+}
+
+#stats h3{
+  color: white;
+  font-family: 'Inter', sans-serif;
+  font-size: 1.5em;
+  margin: 0;
+  text-transform: none;
 }
